--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-5  border border-gray-700 rounded-xl">  
           <div class="card   ">
           <figure class="">
-            <img src="/images/fruit1.png" alt="Shoes" class=" h-28 w-36 " />
+            <img src="./images/fruit1.png" alt="Shoes" class=" h-28 w-36 " />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Strawberry</h2>
@@ -145,7 +145,7 @@
           </div>
         <div class="card  ">
           <figure class="">
-            <img src="/images/fruit2.png" alt="Shoes" class="h-28 w-36" />
+            <img src="./images/fruit2.png" alt="Shoes" class="h-28 w-36" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Orange</h2>
@@ -154,7 +154,7 @@
         </div>
         <div class="card  ">
           <figure class="">
-            <img src="/images/fruit3.png" alt="Shoes" class="h-28 w-36" />
+            <img src="./images/fruit3.png" alt="Shoes" class="h-28 w-36" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Mango</h2>
@@ -163,7 +163,7 @@
         </div>
         <div class="card  ">
           <figure class="">
-            <img src="/images/fruit4.png" alt="Shoes" class="h-28 w-36" />
+            <img src="./images/fruit4.png" alt="Shoes" class="h-28 w-36" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Strawberry</h2>
@@ -172,7 +172,7 @@
         </div>
         <div class="card  ">
           <figure class="">
-            <img src="/images/fruit5.png" alt="Shoes" class="h-28 w-36" />
+            <img src="./images/fruit5.png" alt="Shoes" class="h-28 w-36" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Mango</h2>
@@ -223,7 +223,7 @@
         <!-- card-1 -->
         <div id="btn" class="card w-[270px] h-[477px] bg-base-100 shadow-xl">
           <figure class="">
-            <img src="/images/fruit6.png" alt="Shoes" class="" />
+            <img src="./images/fruit6.png" alt="Shoes" class="" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-2">12.90$ - 18.85$</h2>
@@ -244,7 +244,7 @@
             <form method="dialog" class="modal-box">
 
               <div class="card">
-                <figure><img src="/images/fruit6.png" alt="Shoes" /></figure>
+                <figure><img src="./images/fruit6.png" alt="Shoes" /></figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title">Apple!</h2>
                   <p>If a dog chews Apple whose Apples does he choose?</p>
@@ -264,7 +264,7 @@
         <!-- card-2 -->
         <div id="btn" class="card w-[270px] h-[477px] bg-base-100 shadow-xl">
           <figure class="">
-            <img src="/images/fruit7.png" alt="Shoes" class="" />
+            <img src="./images/fruit7.png" alt="Shoes" class="" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-2">12.90$ - 18.85$</h2>
@@ -285,7 +285,7 @@
             <form method="dialog" class="modal-box">
 
               <div class="card">
-                <figure><img src="/images/fruit7.png" alt="Shoes" /></figure>
+                <figure><img src="./images/fruit7.png" alt="Shoes" /></figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title">Orange</h2>
                   <p>If a dog chews Apple whose Apples does he choose?</p>
@@ -305,7 +305,7 @@
         <!-- card-3 -->
         <div id="btn" class="card w-[270px] h-[477px] bg-base-100 shadow-xl">
           <figure class="">
-            <img src="/images/fruit8.png" alt="Shoes" class="" />
+            <img src="./images/fruit8.png" alt="Shoes" class="" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-2">12.90$ - 18.85$</h2>
@@ -326,7 +326,7 @@
             <form method="dialog" class="modal-box">
 
               <div class="card">
-                <figure><img src="/images/fruit8.png" alt="Shoes" /></figure>
+                <figure><img src="./images/fruit8.png" alt="Shoes" /></figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title">Red Dragon</h2>
                   <p>If a dog chews Apple whose Apples does he choose?</p>
@@ -346,7 +346,7 @@
         <!-- card-4 -->
         <div id="btn" class="card w-[270px] h-[477px] bg-base-100 shadow-xl">
           <figure class="">
-            <img src="/images/fruit9.png" alt="Shoes" class="" />
+            <img src="./images/fruit9.png" alt="Shoes" class="" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-2">12.90$ - 18.85$</h2>
@@ -367,7 +367,7 @@
             <form method="dialog" class="modal-box">
 
               <div class="card">
-                <figure><img src="/images/fruit9.png" alt="Shoes" /></figure>
+                <figure><img src="./images/fruit9.png" alt="Shoes" /></figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title">Banana</h2>
                   <p>If a dog chews Apple whose Apples does he choose?</p>
