--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
        </section>
        <!-- relative cards -->
-       <section class=" mx-32 -mt-20 bg-white relative rounded-xl sm:hidden ">
+       <section class=" mx-32 -mt-20 bg-white relative rounded-xl sm:[340px-hidden] ">
       <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-5  border border-gray-700 rounded-xl">  
           <div class="card   ">
           <figure class="">
