the added responsive

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </div>
               
             </div>
-            <div class="navbar-end sm:hidden ">
+            <div class="navbar-end ">
              <div class=" -mr-1 form-control">
                 <input type="text" placeholder="Search" class="input input-bordered w-[300px]" />
                 
@@ -115,7 +115,7 @@
         </div>
        </section>
        <!-- relative cards -->
-       <section class=" mx-32 -mt-20 bg-white relative rounded-xl sm:[340px-hidden] ">
+       <section class=" mx-32 -mt-20 bg-white relative rounded-xl  ">
       <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-5  border border-gray-700 rounded-xl">  
           <div class="card   ">
           <figure class="">
